Revision history for Perl extension Coro.

TODO: better (earlier) error messages on broken transfer's
TODO: destroy gets only called on cancel: fix(?)

3.3  Sat Jan  6 03:45:00 CET 2007
	- implement $coro->on_destroy.
        - Coro::Event blocking semantics have been changed,
          documented and - hopefully - improved.
	- fix nice adding, not subtracting, from priority.
        - fix ->prio and api_is_ready (patch by Mark Hinds).
        - fixed an assert ("... == prev__cctx->idle_te")
          that could errronously trigger.
        - fix various large and small memleaks.
        - use a (hopefully) more stable cancel implementation
          that immediately frees the coroutine data.
        - cede/cede_notself return a status now.
        - added Coro::guard function.
        - added a global coroutine pool for jobs (on my machine,
          I can create and execute 48k simple coros/s with async,
          and 128k coros with async_pool).
        - Coro::AIO now uses the coroutine priority as io priority.

3.2  Fri Dec 22 05:07:09 CET 2006
	- improve portability to slightly older perls.
        - use cleaner coroutine destruction.
        - simplify configuration for users.
        - optionally (unrecommended) prefer perl functions over
          their coro replacements.

3.11 Tue Dec  5 13:11:24 CET 2006
        - fixed some bogus assert's, but as perl.h disables assert even
          without NDEBUG (thank you very much), not too many people should
          notice (that did include myself). Andreas König noticed, though :)
	- do not save/restore PL_sortcxix on >= 5.9.x, it doesn't seem to have
          it. Also noticed by Andreas König :)
        - save/restore tainted status.
        - verified to pass the testsuite on my 5.9.5.

3.1  Mon Dec  4 23:03:40 CET 2006
        - INCOMPATIBLE CHANGE: $/ is now per-coroutine (but slow).
        - incompatible change: transfer flags are now per-state.
	- give a better error message on deadlock.