@@ -3,6 +3,9 @@ Revision history for Perl extension Coro.
 TODO: better (earlier) error messages on broken transfer's
 TODO: destroy gets only called on cancel: fix(?)
 
+	- remove t/09_timer.t, as it isn't really testing much
+          but was rather flaky in practise.
+
 3.3  Sat Jan  6 03:45:00 CET 2007
 	- implement $coro->on_destroy.
         - Coro::Event blocking semantics have been changed,
